--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "neteng-pro-discuss",
-  "version": "0.0.1",
+  "name": "@netwk-pro/netwk-pro-discuss",
+  "version": "0.0.2",
   "description": "The GitHub Discussion forum for Network Pro Strategies (Network Pro).",
   "keywords": [
     "networking",
@@ -12,11 +12,11 @@
   ],
   "homepage": "https://netwk.pro",
   "bugs": {
-    "url": "https://github.com/NetEng-Pro/neteng-pro.github.io/issues"
+    "url": "https://github.com/netwk-pro/netwk-pro.github.io/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NetEng-Pro/neteng-pro-discuss.git"
+    "url": "git+https://github.com/netwk-pro/netwk-pro-discuss.git"
   },
   "license": "CC-BY-4.0 OR GPL-3.0-or-later",
   "author": "Scott Lopez",
@@ -28,6 +28,9 @@
     "mdlint": "npx markdownlint-cli2 '**/*.md' '!node_modules/**'",
     "fix": "npx eslint --fix && prettier --write .",
     "ci": "rm -rf node_modules package-lock.json && npm install"
+  },
+  "dependencies": {
+    "browserslist": "^4.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
